added all photos and vectors to separate images folder

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="wrapper">
       <header class="header">
         <nav class="navigation">
-          <img class="nav-logo" src="logo.svg" alt="logo" />
+          <img class="nav-logo" src="images/logo.svg" alt="logo" />
           <div class="navigation-bar">
             <div class="navigation-circle"></div>
             <div class="navigation-bar--middle"></div>
@@ -71,7 +71,7 @@
             <span class="material-symbols-outlined"> east </span>
           </button>
         </section>
-        <img src="Ellipse 1.svg" alt="zdjecie urządzenia" />
+        <img src="images/Ellipse 1.svg" alt="zdjecie urządzenia" />
       </header>
       <main>
         <section id="history" class="our-history">
@@ -80,7 +80,7 @@
           <div class="history-boxes">
             <div class="history-box">
               <div class="history-box-square">
-                <img src="puchar.svg" alt="ikona pucharu" />
+                <img src="images/puchar.svg" alt="ikona pucharu" />
               </div>
               <h3>
                 Eksperci w dziedzinie <br />
@@ -94,7 +94,7 @@
             </div>
             <div class="history-box">
               <div class="history-box-square">
-                <img src="klient.svg" alt="ikona pucharu" />
+                <img src="images/klient.svg" alt="ikona pucharu" />
               </div>
               <h3>
                 Dbałość o każdego <br />
@@ -108,7 +108,7 @@
             </div>
             <div class="history-box">
               <div class="history-box-square">
-                <img src="idea.svg" alt="ikona pucharu" />
+                <img src="images/idea.svg" alt="ikona pucharu" />
               </div>
               <h3>
                 Innowacyjne rozwiązania <br />
@@ -121,7 +121,7 @@
             </div>
             <div class="history-box">
               <div class="history-box-square">
-                <img src="stars.svg" alt="ikona pucharu" />
+                <img src="images/stars.svg" alt="ikona pucharu" />
               </div>
               <h3>
                 Zaufanie, solidność, <br />
@@ -173,45 +173,45 @@
                   <span class="cost-time">za miesiąc</span>
                   <div class="costs-packs">
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Diagnostyka i naprawa podstawowych problemów sprzętowych
                         i programowych.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Instalacja i konfiguracja oprogramowania.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Porady i wsparcie techniczne drogą telefoniczną lub
                         online.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Aktualizacje oprogramowania i zabezpieczeń.
                       </p>
                     </div>
                     <div class="costs-pack costs-pack-disabled">
-                      <img src="close.svg" alt="znaczek akceptacji" />
+                      <img src="images/close.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Szybki czas reakcji i priorytetowe wsparcie techniczne.
                       </p>
                     </div>
                     <div class="costs-pack costs-pack-disabled">
-                      <img src="close.svg" alt="znaczek akceptacji" />
+                      <img src="images/close.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Usuwanie wirusów i malware'u.
                       </p>
                     </div>
                     <div class="costs-pack costs-pack-disabled">
-                      <img src="close.svg" alt="znaczek akceptacji" />
+                      <img src="images/close.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Priorytetowe wsparcie techniczne 24/7.
                       </p>
@@ -230,45 +230,45 @@
                   <span class="cost-time">za miesiąc</span>
                   <div class="costs-packs">
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Diagnostyka i naprawa podstawowych problemów sprzętowych
                         i programowych.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Instalacja i konfiguracja oprogramowania.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Porady i wsparcie techniczne drogą telefoniczną lub
                         online.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Aktualizacje oprogramowania i zabezpieczeń.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Szybki czas reakcji i priorytetowe wsparcie techniczne.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Usuwanie wirusów i malware'u.
                       </p>
                     </div>
                     <div class="costs-pack costs-pack-disabled">
-                      <img src="close.svg" alt="znaczek akceptacji" />
+                      <img src="images/close.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Priorytetowe wsparcie techniczne 24/7.
                       </p>
@@ -287,45 +287,45 @@
                   <span class="cost-time">za miesiąc</span>
                   <div class="costs-packs">
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Diagnostyka i naprawa podstawowych problemów sprzętowych
                         i programowych.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Instalacja i konfiguracja oprogramowania.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Porady i wsparcie techniczne drogą telefoniczną lub
                         online.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Aktualizacje oprogramowania i zabezpieczeń.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Szybki czas reakcji i priorytetowe wsparcie techniczne.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Usuwanie wirusów i malware'u.
                       </p>
                     </div>
                     <div class="costs-pack">
-                      <img src="check.svg" alt="znaczek akceptacji" />
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Priorytetowe wsparcie techniczne 24/7.
                       </p>
@@ -368,14 +368,18 @@
               >
             </div>
             <div class="shop-img-container">
-              <img src="mac.svg" alt="Zdjęcie laptopa" class="first-shop-img" />
+              <img
+                src="images/mac.svg"
+                alt="Zdjęcie laptopa"
+                class="first-shop-img"
+              />
               <p class="shop-description shop-description-mobile">
                 Zanurz się w świecie naszego sklepu, gdzie technologia łączy się
                 z inspiracją, a innowacyjność staje się standardem. Dziękujemy
                 za wybór naszego sklepu, gdzie Twoje potrzeby technologiczne są
                 naszym priorytetem!
               </p>
-              <img src="mac2.svg" alt="Zdjęcie laptopa" />
+              <img src="images/mac2.svg" alt="Zdjęcie laptopa" />
             </div>
           </div>
           <button class="shop-btn-mobile">
@@ -400,15 +404,15 @@
             <h3>Kontakt</h3>
             <div class="contact-details">
               <div class="contact-item">
-                <img src="phone.svg" alt="ikona telefonu" />
+                <img src="images/phone.svg" alt="ikona telefonu" />
                 <a href="tel:+48664063012">+48 664 063 012</a>
               </div>
               <div class="contact-item">
-                <img src="mail.svg" alt="ikona koperty pocztowej" />
+                <img src="images/mail.svg" alt="ikona koperty pocztowej" />
                 <a href="mailto:biuro@serwiskak.pl">biuro@serwiskak.pl</a>
               </div>
               <div class="contact-item">
-                <img src="fb.svg" alt="ikona facebooka" />
+                <img src="images/fb.svg" alt="ikona facebooka" />
                 <a
                   target="_blank"
                   href="https://www.facebook.com/profile.php?id=61553926924700"
@@ -436,7 +440,7 @@
         </div>
       </footer>
       <a href="#" class="back-to-top">
-        <img src="arrow-up.svg" alt="Strzałka w górę" />
+        <img src="images/arrow-up.svg" alt="Strzałka w górę" />
       </a>
     </div>
     <script
@@ -452,58 +456,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
-<!-- <div class="costs-box">
-            <div class="costs-level">Podstawowy</div>
-            <p class="costs-description">
-              Pakiet idealny dla tych, którzy potrzebują solidnej pomocy bez
-              nadmiernych kosztów.
-            </p>
-            <h3 class="costs-cost">Od 100zł / brutto</h3>
-            <span class="cost-time">za miesiąc</span>
-            <div class="costs-packs">
-              <div class="costs-pack">
-                <img src="check.svg" alt="znaczek akceptacji" />
-                <p class="costs-pack-desciption">
-                  Diagnostyka i naprawa podstawowych problemów sprzętowych i
-                  programowych.
-                </p>
-              </div>
-              <div class="costs-pack">
-                <img src="check.svg" alt="znaczek akceptacji" />
-                <p class="costs-pack-desciption">
-                  Instalacja i konfiguracja oprogramowania.
-                </p>
-              </div>
-              <div class="costs-pack">
-                <img src="check.svg" alt="znaczek akceptacji" />
-                <p class="costs-pack-desciption">
-                  Porady i wsparcie techniczne drogą telefoniczną lub online.
-                </p>
-              </div>
-              <div class="costs-pack">
-                <img src="check.svg" alt="znaczek akceptacji" />
-                <p class="costs-pack-desciption">
-                  Aktualizacje oprogramowania i zabezpieczeń.
-                </p>
-              </div>
-              <div class="costs-pack costs-pack-disabled">
-                <img src="close.svg" alt="znaczek akceptacji" />
-                <p class="costs-pack-desciption">
-                  Szybki czas reakcji i priorytetowe wsparcie techniczne.
-                </p>
-              </div>
-              <div class="costs-pack costs-pack-disabled">
-                <img src="close.svg" alt="znaczek akceptacji" />
-                <p class="costs-pack-desciption">
-                  Usuwanie wirusów i malware'u.
-                </p>
-              </div>
-              <div class="costs-pack costs-pack-disabled">
-                <img src="close.svg" alt="znaczek akceptacji" />
-                <p class="costs-pack-desciption">
-                  Priorytetowe wsparcie techniczne 24/7.
-                </p>
-              </div>
-            </div>
-          </div> -->
