--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Profesjonalny serwis komputerowy oferujący kompleksowe rozwiązania dla Twojego sprzętu. Naprawy, konserwacja, doradztwo techniczne i wiele więcej. Skorzystaj z naszych usług, aby cieszyć się sprawnym i wydajnym komputerem."
+    />
     <title>
       Serwis Komputerowy Adrian Keller - Serwis Komputerów i Laptopów Szczecin
       Centrum
     </title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
@@ -34,8 +39,18 @@
     <div class="wrapper">
       <header class="header">
         <nav class="navigation">
-          <img class="nav-logo" src="images/logo.svg" alt="logo" />
-          <div class="navigation-bar">
+          <img
+            data-aos="fade-down"
+            data-aos-duration="1000"
+            class="nav-logo"
+            src="images/logo.svg"
+            alt="logo"
+          />
+          <div
+            class="navigation-bar"
+            data-aos="fade-down"
+            data-aos-duration="1000"
+          >
             <div class="navigation-circle"></div>
             <div class="navigation-bar--middle"></div>
           </div>
@@ -44,7 +59,11 @@
               <div class="close-btn-line close-btn-line--1"></div>
               <div class="close-btn-line close-btn-line--2"></div>
             </div>
-            <ul class="navigation-list">
+            <ul
+              class="navigation-list"
+              data-aos="fade-down"
+              data-aos-duration="1000"
+            >
               <li><a href="#" class="navigation-link">Strona główna</a></li>
               <li><a href="#history" class="navigation-link">O nas</a></li>
               <li><a href="#costs" class="navigation-link">Cennik</a></li>
@@ -59,26 +78,58 @@
         </nav>
 
         <section class="header-content">
-          <h1 class="header-content-title">Serwis Komputerowy Adrian Keller</h1>
-          <p class="header-content-description">
+          <h1
+            class="header-content-title"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+          >
+            Serwis Komputerowy Adrian Keller
+          </h1>
+          <p
+            class="header-content-description"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+            data-aos-delay="300"
+          >
             Odkryj niezawodne rozwiązania dla Twojego biznesu dzięki serwisowi
             Adrian Keller! Nasza ekspertyza w dziedzinie technologii i
             innowacyjnych rozwiązań pozwoli Ci zwiększyć wydajność,
             zoptymalizować procesy i osiągnąć sukces.
           </p>
-          <button class="header-content-btn">
+          <button
+            class="header-content-btn"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+            data-aos-delay="700"
+            data-aos-offset="0"
+          >
             <a href="#history">Czytaj więcej</a>
             <span class="material-symbols-outlined"> east </span>
           </button>
         </section>
-        <img src="images/Ellipse 1.svg" alt="zdjecie urządzenia" />
+        <img
+          loading="lazy"
+          src="images/Ellipse 1.svg"
+          alt="zdjecie urządzenia"
+        />
       </header>
       <main>
         <section id="history" class="our-history">
-          <span class="history-subtitle">Nasza historia</span>
-          <h2 class="history-title">Zespół Ekspertów w Świecie Komputerów</h2>
+          <span
+            class="history-subtitle"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+            >Nasza historia</span
+          >
+          <h2 class="history-title" data-aos="fade-up" data-aos-duration="1000">
+            Zespół Ekspertów w Świecie Komputerów
+          </h2>
           <div class="history-boxes">
-            <div class="history-box">
+            <div
+              class="history-box"
+              data-aos="fade-up"
+              data-aos-duration="1000"
+            >
               <div class="history-box-square">
                 <img src="images/puchar.svg" alt="ikona pucharu" />
               </div>
@@ -92,7 +143,11 @@
                 usług.
               </p>
             </div>
-            <div class="history-box">
+            <div
+              class="history-box"
+              data-aos="fade-up"
+              data-aos-duration="1000"
+            >
               <div class="history-box-square">
                 <img src="images/klient.svg" alt="ikona pucharu" />
               </div>
@@ -106,7 +161,11 @@
                 dostosować nasze usługi do oczekiwań klientów.
               </p>
             </div>
-            <div class="history-box">
+            <div
+              class="history-box"
+              data-aos="fade-up"
+              data-aos-duration="1000"
+            >
               <div class="history-box-square">
                 <img src="images/idea.svg" alt="ikona pucharu" />
               </div>
@@ -119,7 +178,11 @@
                 serwisu komputerowego i stale doskonalimy nasze umiejętności.
               </p>
             </div>
-            <div class="history-box">
+            <div
+              class="history-box"
+              data-aos="fade-up"
+              data-aos-duration="1000"
+            >
               <div class="history-box-square">
                 <img src="images/stars.svg" alt="ikona pucharu" />
               </div>
@@ -136,8 +199,15 @@
           </div>
         </section>
         <section id="costs" class="costs">
-          <span class="costs-subtitle">Najlepsze ceny</span>
-          <h2 class="costs-title">Cennik Naszych Profesjonalnych Rozwiązań</h2>
+          <span
+            class="costs-subtitle"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+            >Najlepsze ceny</span
+          >
+          <h2 class="costs-title" data-aos="fade-up" data-aos-duration="1000">
+            Cennik Naszych Profesjonalnych Rozwiązań
+          </h2>
           <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
               <button
@@ -163,7 +233,11 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <div class="costs-box">
+                <div
+                  class="costs-box"
+                  data-aos="zoom-in"
+                  data-aos-duration="1000"
+                >
                   <div class="costs-level">Podstawowy</div>
                   <p class="costs-description">
                     Pakiet idealny dla wszystkich tych, którzy potrzebują
@@ -220,7 +294,12 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="costs-box">
+                <div
+                  class="costs-box"
+                  data-aos="zoom-in"
+                  data-aos-duration="1000"
+                  data-aos-delay="400"
+                >
                   <div class="costs-level">Profesjonalny</div>
                   <p class="costs-description">
                     Kompleksowa diagnostyka, naprawa, instalacja oprogramowania,
@@ -277,7 +356,12 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="costs-box">
+                <div
+                  class="costs-box"
+                  data-aos="zoom-in"
+                  data-aos-duration="1000"
+                  data-aos-delay="800"
+                >
                   <div class="costs-level">Premium</div>
                   <p class="costs-description">
                     Dla najbardziej wymagających. To rozwiązanie dla tych,
@@ -339,11 +423,24 @@
         <section id="shop" class="shop">
           <div class="shop-columns">
             <div class="shop-left-side">
-              <span class="shop-subtitlte">Nasz sklep</span>
-              <h2 class="shop-title">
+              <span
+                class="shop-subtitlte"
+                data-aos="fade-up"
+                data-aos-duration="1000"
+                >Nasz sklep</span
+              >
+              <h2
+                class="shop-title"
+                data-aos="fade-up"
+                data-aos-duration="1000"
+              >
                 Sklep Technologiczny i Ekspert Wsparcia
               </h2>
-              <p class="shop-description">
+              <p
+                class="shop-description"
+                data-aos="fade-up"
+                data-aos-duration="1000"
+              >
                 Oferujemy szeroki wybór komputerów, dostosowanych do
                 różnorodnych potrzeb i oczekiwań. Bez względu na to, czy jesteś
                 profesjonalistą, entuzjastą gier, czy po prostu szukasz
@@ -351,7 +448,11 @@
                 Nasze komputery są starannie wyselekcjonowane, aby zapewnić
                 najwyższą wydajność i niezawodność.
               </p>
-              <p class="shop-description shop-description-desktop">
+              <p
+                class="shop-description shop-description-desktop"
+                data-aos="fade-up"
+                data-aos-duration="1000"
+              >
                 Zanurz się w świecie naszego sklepu, gdzie technologia łączy się
                 z inspiracją, a innowacyjność staje się standardem. Dziękujemy
                 za wybór naszego sklepu, gdzie Twoje potrzeby technologiczne są
@@ -360,6 +461,8 @@
 
               <a
                 target="_blank"
+                data-aos="fade-up"
+                data-aos-duration="1000"
                 href="https://sklep.serwiskak.pl/"
                 class="go-to-shop-desktop"
                 >Przejdź do sklepu<span class="material-symbols-outlined">
@@ -367,7 +470,11 @@
                 </span></a
               >
             </div>
-            <div class="shop-img-container">
+            <div
+              class="shop-img-container"
+              data-aos="fade-up"
+              data-aos-duration="1000"
+            >
               <img
                 src="images/mac.svg"
                 alt="Zdjęcie laptopa"
@@ -392,7 +499,7 @@
       </main>
       <footer id="contact" class="footer">
         <div class="footer-top">
-          <div class="hours">
+          <div class="hours" data-aos="fade-up" data-aos-duration="1000">
             <h3>Godziny otwarcia:</h3>
             <div class="hours-details">
               <span>Poniedziałek - Piątek: 8:00 - 22:00</span>
@@ -400,7 +507,12 @@
               <span>Niedziela: 10:00 - 20:00</span>
             </div>
           </div>
-          <div class="contact">
+          <div
+            class="contact"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+            data-aos-delay="800"
+          >
             <h3>Kontakt</h3>
             <div class="contact-details">
               <div class="contact-item">
@@ -421,19 +533,30 @@
               </div>
             </div>
           </div>
-          <div class="map">
+          <div
+            class="map"
+            data-aos="fade-up"
+            data-aos-duration="1000"
+            data-aos-delay="400"
+          >
             <iframe
+              title="google mapa"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2326.3404512110956!2d18.620594577199654!3d54.33329050042187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46fd73f2abbc5d51%3A0x2d4f5343ae0b5d03!2s80-001%20Gda%C5%84sk!5e0!3m2!1spl!2spl!4v1707034711596!5m2!1spl!2spl"
               width="600"
               height="450"
               style="border: 0"
-              allowfullscreen=""
+              allowfullscreen="yes"
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
           </div>
         </div>
-        <div class="copyright">
+        <div
+          class="copyright"
+          data-aos="zoom-in"
+          data-aos-duration="1000"
+          data-aos-offset="0"
+        >
           <p>
             © 2024 Serwis Komputerowy Adrian Keller, Wszelkie prawa zastrzeżone
           </p>
@@ -443,12 +566,21 @@
         <img src="images/arrow-up.svg" alt="Strzałka w górę" />
       </a>
     </div>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 100,
+        once: true,
+      });
+    </script>
     <script
+      async
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"
     ></script>
     <script
+      async
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
