--- a/index.html
+++ b/index.html
@@ -556,6 +556,7 @@
           data-aos="zoom-in"
           data-aos-duration="1000"
           data-aos-offset="0"
+          data-aos-delay="700"
         >
           <p>
             © 2024 Serwis Komputerowy Adrian Keller, Wszelkie prawa zastrzeżone
