--- a/index.html
+++ b/index.html
@@ -78,34 +78,21 @@
         </nav>
 
         <section class="header-content">
-          <h1
-            class="header-content-title"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-          >
-            Serwis Komputerowy Adrian Keller
-          </h1>
-          <p
-            class="header-content-description"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-delay="300"
-          >
-            Odkryj niezawodne rozwiązania dla Twojego biznesu dzięki serwisowi
-            Adrian Keller! Nasza ekspertyza w dziedzinie technologii i
-            innowacyjnych rozwiązań pozwoli Ci zwiększyć wydajność,
-            zoptymalizować procesy i osiągnąć sukces.
-          </p>
-          <button
-            class="header-content-btn"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-delay="700"
-            data-aos-offset="0"
-          >
-            <a href="#history">Czytaj więcej</a>
-            <span class="material-symbols-outlined"> east </span>
-          </button>
+          <div class="header-text" data-aos="fade-up" data-aos-duration="1000">
+            <h1 class="header-content-title">
+              Serwis Komputerowy Adrian Keller
+            </h1>
+            <p class="header-content-description">
+              Odkryj niezawodne rozwiązania dla Twojego biznesu dzięki serwisowi
+              Adrian Keller! Nasza ekspertyza w dziedzinie technologii i
+              innowacyjnych rozwiązań pozwoli Ci zwiększyć wydajność,
+              zoptymalizować procesy i osiągnąć sukces.
+            </p>
+            <button class="header-content-btn">
+              <a href="#history">Czytaj więcej</a>
+              <span class="material-symbols-outlined"> east </span>
+            </button>
+          </div>
         </section>
         <img
           loading="lazy"
