added support costs

--- a/index.html
+++ b/index.html
@@ -195,6 +195,170 @@
           <h2 class="costs-title" data-aos="fade-up" data-aos-duration="1000">
             Cennik Naszych Profesjonalnych Rozwiązań
           </h2>
+          <div id="carouselExampleIndicators1" class="carousel slide slide-1">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators1"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators1"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators1"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div
+                  class="costs-box"
+                  data-aos="zoom-in"
+                  data-aos-duration="1000"
+                >
+                  <div class="costs-level">Podstawowy</div>
+                  <p class="costs-description">
+                    Naprawa i diagnostyka komputerów
+                  </p>
+                  <h3 class="costs-cost">Od 100zł / brutto</h3>
+                  <span class="cost-time">za godzinę</span>
+                  <div class="costs-packs">
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Diagnozowanie problemów sprzętowych i programowych.
+                      </p>
+                    </div>
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Naprawa uszkodzonych podzespołów, takich jak dyski
+                        twarde, pamięć RAM czy karty graficzne.
+                      </p>
+                    </div>
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Usuwanie wirusów, malware'u i innych złośliwych
+                        oprogramowań.
+                      </p>
+                    </div>
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Aktualizacja sterowników i oprogramowania.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div
+                  class="costs-box"
+                  data-aos="zoom-in"
+                  data-aos-duration="1000"
+                  data-aos-delay="400"
+                >
+                  <div class="costs-level">Profesjonalny</div>
+                  <p class="costs-description">
+                    Instalacja i konfiguracja oprogramowania
+                  </p>
+                  <h3 class="costs-cost">Od 50zł / brutto</h3>
+                  <span class="cost-time">za godzinę</span>
+                  <div class="costs-packs">
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Instalacja systemów operacyjnych, programów biurowych,
+                        oprogramowania antywirusowego i innych aplikacji.
+                      </p>
+                    </div>
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Konfiguracja i personalizacja oprogramowania zgodnie z
+                        indywidualnymi preferencjami klienta.
+                      </p>
+                    </div>
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Aktualizacje i łatki oprogramowania dla zapewnienia
+                        bezpieczeństwa i najnowszych funkcji.
+                      </p>
+                    </div>
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Szkolenie i wsparcie w obsłudze nowego oprogramowania.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div
+                  class="costs-box"
+                  data-aos="zoom-in"
+                  data-aos-duration="1000"
+                  data-aos-delay="800"
+                >
+                  <div class="costs-level">Premium</div>
+                  <p class="costs-description">
+                    Optymalizacja i konserwacja systemów komputerowych
+                  </p>
+                  <h3 class="costs-cost">Od 70zł / brutto</h3>
+                  <span class="cost-time">za godzinę</span>
+                  <div class="costs-packs">
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Diagnostyka i naprawa podstawowych problemów sprzętowych
+                        i programowych.
+                      </p>
+                    </div>
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Czyszczenie i optymalizacja systemu operacyjnego.
+                      </p>
+                    </div>
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Usuwanie zbędnych plików, cookies i innych danych
+                        tymczasowych.
+                      </p>
+                    </div>
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Defragmentacja dysku i optymalizacja rejestru
+                        systemowego.
+                      </p>
+                    </div>
+                    <div class="costs-pack">
+                      <img src="images/check.svg" alt="znaczek akceptacji" />
+                      <p class="costs-pack-desciption">
+                        Sprawdzanie i naprawa błędów dysku, a także skanowanie i
+                        usuwanie niepotrzebnych programów uruchamianych wraz z
+                        systemem.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
               <button
