--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
               innowacyjnych rozwiązań pozwoli Ci zwiększyć wydajność,
               zoptymalizować procesy i osiągnąć sukces.
             </p>
-            <button class="header-content-btn">
+            <button
+              onclick="window.location.href='#history'"
+              class="header-content-btn"
+            >
               <a href="#history">Czytaj więcej</a>
               <span class="material-symbols-outlined"> east </span>
             </button>
